# clean-arch-study

./: .pylint.rc  Dockerfile  README.md  pyproject.toml  run.py  test.json
src/data/interfaces/: users_repository.py
src/data/tests/: user_finder.py  user_register.py
src/data/use_cases/: user_finder.py  user_finder_test.py  user_register.py  user_register_test.py
src/domain/models/: users.py
src/domain/use_cases/: user_finder.py  user_register.py
src/errors/: error_handler.py
src/errors/types/: __init__.py  http_not_found.py
src/infra/db/entities/: users.py
src/infra/db/repositories/: users_repository.py  users_repository_test.py
src/infra/db/settings/: base.py  connection.py  connection_test.py  settings.py
src/infra/db/tests/: users_repository.py
src/main/adapters/: request_adapter.py
src/main/composers/: user_finder_composer.py  user_register_composer.py
src/main/routes/: routes.py
src/main/server/: server.py
src/presentation/controllers/: user_finder_controller.py  user_finder_controller_test.py  user_register_controller.py  user_register_controller_test.py
src/presentation/http_types/: http_request.py  http_response.py
src/presentation/interfaces/: controller_interface.py
src/validators/: user_finder_validator.py  user_register_validator.py  user_register_validator_test.py
