[project]
name = "clean-arch-study"
version = "0.1.0"
description = ""
authors = [
    {name = "Tadeu Madureira",email = "73614098+tadeucbm@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
