[project]
name = "clean-arch-study"
version = "0.1.0"
description = ""
authors = [
    {name = "Tadeu Madureira",email = "73614098+tadeucbm@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pylint (>=3.3.7,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "mysql-connector-python (>=9.3.0,<10.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "cryptography (>=45.0.3,<46.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "cerberus (>=1.3.7,<2.0.0)",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
